[package]
name = "violin_rs_js"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
violin_rs = { git = "https://github.com/bedrock-crustaceans/violinrs.git", version = "*" }

[lib]
crate-type = ["cdylib"]
name = "violin_rs_js"
# path = "./src/lib.rs"
deno_bindgen = "0.8.1"
